--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>Joye Zhang--React App</title>
     <link href="/static/css/2.1a02f21c.chunk.css" rel="stylesheet">
     <link href="/static/css/main.b37c2acb.chunk.css" rel="stylesheet">
 </head>
