--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/logo.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/images/frontend.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pikicode Corp.</title>
+    <title>Joye Zhang-Front End Developer.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
